# ccc-2026-web

./: .gitignore  README.md  pyproject.toml
.github/workflows/: deploy.yml
corpus/: tlg0003.tlg001.perseus-grc2.xml  tlg0006.tlg001.perseus-grc2.xml  tlg0006.tlg002.perseus-grc2.xml  tlg0006.tlg003.perseus-grc2.xml  tlg0006.tlg004.perseus-grc2.xml  tlg0006.tlg005.perseus-grc2.xml  tlg0006.tlg006.perseus-grc2.xml  tlg0006.tlg007.perseus-grc2.xml  tlg0006.tlg008.perseus-grc2.xml  tlg0006.tlg009.perseus-grc2.xml  tlg0006.tlg010.perseus-grc2.xml  tlg0006.tlg011.perseus-grc2.xml  tlg0006.tlg012.perseus-grc2.xml  tlg0006.tlg013.perseus-grc2.xml  tlg0006.tlg014.perseus-grc2.xml  tlg0006.tlg015.perseus-grc2.xml  tlg0006.tlg016.perseus-grc2.xml  tlg0006.tlg017.perseus-grc2.xml  tlg0006.tlg018.perseus-grc2.xml  tlg0006.tlg019.perseus-grc2.xml  tlg0011.tlg001.perseus-grc2.xml  tlg0011.tlg002.perseus-grc2.xml  tlg0011.tlg003.perseus-grc2.xml  tlg0011.tlg004.perseus-grc2.xml  tlg0011.tlg005.perseus-grc2.xml  tlg0011.tlg006.perseus-grc2.xml  tlg0011.tlg007.perseus-grc2.xml  tlg0011.tlg008.perseus-grc2.xml  tlg0012.tlg001.perseus-grc2.xml  tlg0012.tlg002.perseus-grc2.xml  tlg0016.tlg001.perseus-grc2.xml  tlg0085.tlg001.perseus-grc2.xml  tlg0085.tlg002.perseus-grc2.xml  tlg0085.tlg003.perseus-grc2.xml  tlg0085.tlg004.perseus-grc2.xml  tlg0085.tlg005.perseus-grc2.xml  tlg0085.tlg006.perseus-grc2.xml  tlg0085.tlg007.perseus-grc2.xml
scripts/: chunk_corpus.py  dictify_csv.py  epic_tragic.json  run_tokenizer.py  tragedy_urn_heat.csv  tragedy_urn_heat.json
src/poikilogos/: app.py  (+1 more)
(+6507 files in other folders)
