[project]
name = "poikilogos"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.3",
    "frozen-flask>=1.0.2",
    "perseus-cts",
]

license = {text= "CC-BY-SA"}

[tool.uv.sources]
perseus-cts = { git = "https://github.com/PerseusDLCode/perseus-cts.git" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/poikilogos"]

[project.scripts]
dev = "poikilogos.app:main"
build = "poikilogos.app:build"
